--- a/templates/vente/vente.html.twig
+++ b/templates/vente/vente.html.twig
@@ -18,6 +18,7 @@
                     <div class="form-group col-md-6">
                         <label class="form-label" for="numero">Numéro :</label>
                         <input class="form-control" type="text" id="numero" name="numero" required>
+                        <input type="hidden"  id="venteValider" name="venteValider" required>
                     </div>
                 </div>
 
@@ -28,6 +29,7 @@
                     <tr>
                         <th>Produit</th>
                         <th>Prix</th>
+                        <th>Qte</th>
                         <th>Sélectionner</th>
                     </tr>
                     </thead>
@@ -36,8 +38,9 @@
                         <tr>
                             <td>{{ produit.nomProduit }}</td>
                             <td>{{ produit.prix }}</td>
+                             <td>{{ produit.quantiteStock }}</td>
                             <td>
-                                <input type="checkbox" class="produit-checkbox" data-produit-id="{{ produit.id }}">
+                                <input type="checkbox" class="produit-checkbox ajouter" data-produit-stock="{{ produit.quantiteStock }}" data-produit-nom="{{ produit.nomProduit }}" data-produit-prix="{{ produit.prix }}"  data-produit-id="{{ produit.id }}">
                             </td>
                         </tr>
                     {% endfor %}
@@ -55,82 +58,151 @@
                         <th>Coût</th>
                     </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody id="produitSelectioner" ></tbody>
                 </table>
 
                 <p id="montant_total">Montant total : </p>
 
-                <button type="submit">Valider la vente</button>
+                <button type="submit" id="envoyer" >Valider la vente</button>
             </form>
+<!-- /.modal-content -->
+  <div class="modal fade bs-example-modal-center" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title mt-0">Notification</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                </div>
+                <div class="modal-body">
+                   <p class="messageStock" ></p>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
+{% endblock %}       
 
-    <script>
-        // Fonction pour calculer le montant total
-        function calculerMontantTotal() {
-            var couts = document.querySelectorAll('[id^="cout_"]');
-            var montantTotal = 0;
-            for (var i = 0; i < couts.length; i++) {
-                montantTotal += parseFloat(couts[i].textContent);
-            }
-            document.getElementById('montant_total').textContent = 'Montant total : ' + montantTotal.toFixed(2);
+{% block javascript %}
+
+     <!-- plugins:js -->
+  <script src="{{ asset('assets/vendors/js/vendor.bundle.base.js') }}"></script>
+  <!-- endinject -->
+  <!-- Plugin js for this page -->
+  <script src="{{ asset('assets/vendors/chart.js/Chart.min.js') }}"></script>
+  <script src="{{ asset('assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
+  <script src="{{ asset('assets/vendors/progressbar.js/progressbar.min.js') }}"></script>
+
+  <!-- End plugin js for this page -->
+  <!-- inject:js -->
+  <script src="{{ asset('assets/js/off-canvas.js') }}"></script>
+  <script src="{{ asset('assets/js/hoverable-collapse.js') }}"></script>
+  <script src="{{ asset('assets/js/template.js') }}"></script>
+  <script src="{{ asset('assets/js/settings.js') }}"></script>
+  <script src="{{ asset('assets/js/todolist.js') }}"></script>
+  <!-- endinject -->
+  <!-- Custom js for this page-->
+  <script src="{{ asset('assets/js/jquery.cookie.js') }}" type="text/javascript"></script>
+  <script src="{{ asset('assets/js/dashboard.js') }}"></script>
+  <script src="{{ asset('assets/js/Chart.roundedBarCharts.js') }}"></script>
+  <!-- End custom js for this page-->
+
+  <script>
+        //sauvegarder les produit sélectionner
+        var tabProduitSelect =[]
+        var tabStockProduit = []
+    $(".ajouter").on("click", function () {
+         var idProduit = $(this).attr("data-produit-id");
+         var prixProduit = $(this).attr("data-produit-prix");
+         var nomProduit = $(this).attr("data-produit-nom");
+         var stockProduit = $(this).attr("data-produit-stock");
+       
+        if ( parseFloat(stockProduit)==0) {
+            $('.messageStock').text('se produit est indisponible pour le moment')
+        $('.bs-example-modal-center').modal('show');
+         $(this)[0].checked = false;
         }
+        else{
+             if ($(this).is(':checked')) {
 
-        // Fonction pour mettre à jour le tableau des produits sélectionnés
-        function mettreAJourTableauProduitsSelectionnes() {
-            var tbody = document.querySelector('#table-produits-selectionnes tbody');
-            tbody.innerHTML = '';
 
-            var produitsSelectionnes = document.querySelectorAll('.produit-checkbox:checked');
-            produitsSelectionnes.forEach(function(produitSelectionne) {
-                var produitId = produitSelectionne.getAttribute('data-produit-id');
-                var produit = document.querySelector('#table-produits [data-produit-id="' + produitId + '"]');
+                tabProduitSelect.push({
+                   id: idProduit,
+                   quantite : 1
+                });
+               
+                    $('#produitSelectioner').append(
+                        '<tr class="produit'+idProduit+'" >' +
+                                '<td class="text-right nom ">' + nomProduit  + '</td>' +
+                                '<td class="text-left "> <span class="prix" >' + prixProduit + '</span></td>' +
+                                '<td class="text-left"> <input type="number" class="quantite-input" min="0" value="1"  data-produit-stock="'+stockProduit+'" data-produit-id="'+idProduit+'" > </td>' +
+                                '<td class="text-right"><span class="cout" >' + prixProduit + '</span></td>' +
+                                
+                        '</tr>'    
+            )
+             }
+             else{
 
-                var tr = document.createElement('tr');
-                var tdProduit = document.createElement('td');
-                var tdPrix = document.createElement('td');
-                var tdQuantite = document.createElement('td');
-                var tdCout = document.createElement('td');
+                 $('.produit'+idProduit).remove()
+                tabProduitSelect = tabProduitSelect.filter((element) =>{ return element.id != idProduit })
 
-                tdProduit.textContent = produit.parentNode.parentNode.querySelector('td:first-child').textContent;
-                tdPrix.textContent = produit.parentNode.parentNode.querySelector('td:nth-child(2)').textContent;
-                tdQuantite.innerHTML = '<input type="number" class="quantite-input" min="0" value="0">';
-                tdCout.setAttribute('id', 'cout_' + produitId);
+         }  
+       }
+        
+        console.log(tabProduitSelect)
 
-                tr.appendChild(tdProduit);
-                tr.appendChild(tdPrix);
-                tr.appendChild(tdQuantite);
-                tr.appendChild(tdCout);
+   })
 
-                tbody.appendChild(tr);
-            });
-        }
+ $("body").on('keyup','.quantite-input',function () {
+     var quantiter =  $(this).val();
+     var idProduit = $(this).attr("data-produit-id");
+     var stockProduit = $(this).attr("data-produit-stock");
+     var parenttr =   $(this).parent().parent()
+      var enfant = parenttr.children()
+      var prix = enfant.find('.prix').text() 
+      var coutspan = enfant.find('.cout')
+     if ( quantiter == 0 ||  quantiter == undefined || quantiter == null  ) {
+         coutspan.text(prix)
+     }
+     else{
+     
+      if ( parseFloat(quantiter)  > parseFloat(stockProduit) ) {
 
-        // Écouter les événements de changement des cases à cocher des produits
-        var produitCheckboxes = document.querySelectorAll('.produit-checkbox');
-        produitCheckboxes.forEach(function(checkbox) {
-            checkbox.addEventListener('change', function() {
-                mettreAJourTableauProduitsSelectionnes();
-                calculerMontantTotal();
-            });
+        $('.messageStock').text('La quantité sélectionné est supérieur au stock')
+        $('.bs-example-modal-center').modal('show');
+        
+      }
+
+      else{
+      
+      var cout = parseFloat(prix)*parseFloat(quantiter)
+      coutspan.text(cout)
+
+     for (let index = 0; index <  tabProduitSelect.length; index++) {
+       
+         if (tabProduitSelect[index].id == idProduit ) {
+            tabProduitSelect[index].quantite = quantiter
+         }
+        
+     }
+
+       
+     }
+
+console.log(tabProduitSelect)
+     }
+
+  })
+
+    
+ $('#envoyer').click(function () {
+            $('#venteValider').val(JSON.stringify(tabProduitSelect));
         });
 
-        // Écouter les événements de changement des quantités des produits sélectionnés (avec événement délégué)
-        var tableauProduitsSelectionnes = document.getElementById('table-produits-selectionnes');
-        tableauProduitsSelectionnes.addEventListener('input', function(event) {
-            if (event.target.classList.contains('quantite-input')) {
-                var quantiteInput = event.target;
-                var produitId = document.querySelector('input.produit-checkbox:checked').getAttribute('data-produit-id');
-                var prix = parseFloat(quantiteInput.parentNode.parentNode.querySelector('td:nth-child(2)').textContent);
-                var quantite = parseInt(quantiteInput.value);
-                var cout = quantite * prix;
-                document.getElementById('cout_' + produitId).textContent = cout.toFixed(2);
-                calculerMontantTotal();
-            }
-        });
+
+       
     </script>
 
+    
+  {% endblock %}
 
 
-
-
-{% endblock%}
